--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <link rel="stylesheet" href="./GeoEuskadi_Demo_files/L.Control.HtmlLegend.css">
     <script src="./GeoEuskadi_Demo_files/L.Control.HtmlLegend.js"></script>
 
-
+    <script src="https://unpkg.com/esri-leaflet@2.2.3/dist/esri-leaflet.js"
+    integrity="sha512-YZ6b5bXRVwipfqul5krehD9qlbJzc6KOGXYsDjU9HHXW2gK57xmWl2gU6nAegiErAqFXhygKIsWPKbjLPXVb2g=="
+    crossorigin=""></script> 
 
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
